# desa-rs

./: .gitignore  Cargo.toml  build-libssl.sh  build.sh
modules/: Cargo.toml
modules/src/: main.rs
modules/src/modules/: apt.rs  cargo.rs  docker.rs  git.rs  go.rs  mod.rs  nomachine.rs  npm.rs  pip.rs  vmware.rs  vscode.rs
src/: main.rs
src/modules/: apt.rs  cargo.rs  docker.rs  mod.rs  npm.rs
utility/: Cargo.toml
utility/src/: arch.rs  clean.rs  download.rs  execute.rs  file.rs  lib.rs  mirror.rs  package.rs  platform.rs  process.rs  registry.rs
