[package]
name = "desa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
#opt-level = 3
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.2"
utility = { path = "../utility" }
