[package]
name = "desa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
#opt-level = 3
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
utility = { path = "../utility" }
clap = "3.2"
dirs = "4.0"
reqwest = { version = "0.11", features = [
	"rustls-tls",
], default-features = false }
futures = "0.3.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
indicatif = "0.17.7"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
