[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
surf = {version = "2.3.2", features = ["h1-client"]}
base64 = { version = "0.13.0" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
dirs = "4.0.0"