[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = { version = "0.13.0" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
dirs = "4.0.0"
bytes = "1.2"
tempfile = "3.3"
indicatif = "0.17"
downloader = "0.2"

 [target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]


[target.x86_64-pc-windows-gnu]
