[package]
edition = "2021"
name = "utility"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.0" }
bytes = "1.2"
dirs = "4.0.0"
#downloader = "0.2"
indicatif = "0.17"
reqwest = { version = "0.11.16", features = [
	"blocking",
	"rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.3"
futures = "0.3.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
clap = "3.2"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-pc-windows-gnu]
